# ray-game

./: .gitignore  AGENTS.md  GEMINI.md  Makefile  NOTE.md  README.md  chapter1_structure_timeline.html  design.md  encounter_design_v1.md  engineering_plan_v3.md  main.py  opus-said.md  pyproject.toml  scratch.html  system_design_v1.md  test.html  timeline-claude.html  timeline-current.html  timeline-ds.html  timeline-gpt.html  timeline.html  第一章剧本.md
.github/workflows/: deploy-pages.yml
debug/: quick_save.pkl  save_01.pkl  save_02.pkl  save_03.pkl
docs/: architecture-refactor-roadmap.md  architecture-roadmap-progress.md  architecture.md  current-architecture-plan.md  encounter-dsl-design-opus-v3.md  encounter-dsl-design-opus-v4-patch.md  encounter-dsl-design-opus-v4.md  encounter-dsl-design-v2.md  encounter-dsl-design.md  encounter-dsl-desing-opus-v2.md  ink-external-function-audit.md  lisp_runtime_refactor_plan.md  qa-guide-refactor.md  thu-runtime-dsl.txt  unity-migration-map.md  第一版故事大纲.md  第二版故事大纲.md
docs/剧本/: 酒吧艳遇.md  黑夜入宅.md
encounter-如何写enc/: SKILL.md
encounter-如何写enc/references/: examples.md  language.md  templates.md
encounter-如何写剧本/: SKILL.md
scripts/: check_parens.py  fix_web_index.py
src/: test.html  test2.html
src/raygame/: app.py  constants.py  dialogue_compile.py  rendering.py  scm_lint.py
src/raygame/content/: __init__.py  builders.py  cards.py  city.py  (+10 more)
src/sincity/: app.py  dialogue_compile.py  labels.py  rendering.py  scm_lint.py
src/如何写scm场景文件/: SKILL.md
web_probe_pyray/: main.py
如何写scm场景文件/: SKILL.md
如何写剧本/: SKILL.md
(+197 files in other folders)
