[project]
name = "ray-game"
version = "0.1.0"
description = "Playable noir detective prototype built with raylib + raygui"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "inkpython>=0.1.0",
    "raylib==5.5.0.3",
]

[project.scripts]
ray-game = "raygame.main:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raygame"]

[dependency-groups]
web = [
    "pygbag>=0.8.7",
]
